Added L10N YAML flattening, Removed trash Update .gitignore, sidebar.yml, and 6 more files...

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@ node_modules/
 static/resources/DecimalJs*
 static/resources/SortableJS
 static/resources/Standalone
+
+# Secrets
+src/
+bin/
+app/
+.run/
+*.tmpl
