Revamped XML sitemap, Added run configs, Added release script, Removed commented HTML Update .gitignore, app.py - Minify.run.xml, and 11 more files...

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,8 @@ static/resources/DecimalJs*
 static/resources/SortableJS
 static/resources/Standalone
 
-# Secrets
+# Golang revamp
 src/
 bin/
 app/
-.run/
 *.tmpl
