--- a/data/sitemap.yml
+++ b/data/sitemap.yml
@@ -1,17 +1,63 @@
 # Sitemap definition
 
-- "/"
-- "/about/"
-#- "/articles/"
-- "/contact/"
-- "/content/"
-- "/content/circuitpython-ebyte-e32/"
-- "/content/docker-mini-cctv-nvr/"
-- "/content/lscom-cli-dotnet/"
-- "/links/"
-- "/privacy/"
-- "/tools/"
-- "/tools/iban-generator/"
-- "/tools/excel-password-remover/"
-- "/tools/uuid-generator/"
-- "/tools/vat-calculator/"
+# changefreq: "monthly" is implied unless specified
+
+sitemap:
+  "/":
+    lastmod: "2025-03-30T00:00:00+01:00"
+    priority: "1"
+
+  "/contact/":
+    lastmod: "2025-03-01T07:40:00+01:00"
+    priority: "0.5"
+
+  "/content/":
+    lastmod: "2025-09-13T16:19:00+02:00"
+    priority: "0.2"
+
+  "/content/circuitpython-ebyte-e32/":
+    lastmod: "2025-03-30T14:52:00+02:00"
+    priority: "0.5"
+
+  "/content/docker-mini-cctv-nvr/":
+    lastmod: "2025-03-30T14:52:00+02:00"
+    priority: "0.3"
+
+  "/content/lscom-cli-dotnet/":
+    lastmod: "2025-09-13T16:19:00+02:00"
+    priority: "0.6"
+
+  "/links/":
+    lastmod: "2025-03-01T07:40:00+01:00"
+    priority: "0.6"
+
+  "/privacy/":
+    lastmod: "2025-03-30T00:00:00+01:00"
+    priority: "0.4"
+
+  "/tools/":
+    lastmod: "2025-09-13T16:19:00+02:00"
+    priority: "0.2"
+
+  "/tools/iban-generator/":
+    lastmod: "2025-08-28T21:23:00+02:00"
+    priority: "0.6"
+
+  "/tools/excel-password-remover/":
+    lastmod: "2025-09-13T16:19:00+02:00"
+    priority: "0.9"
+
+  "/tools/uuid-generator/":
+    lastmod: "2025-08-28T21:23:00+02:00"
+    priority: "0.3"
+
+  "/tools/vat-calculator/":
+    lastmod: "2025-09-18T00:15:00+02:00"
+    priority: "0.6"
+
+#"/about/":
+#  lastmod: ""
+#  priority: ""
+#"/articles/":
+#  lastmod: ""
+#  priority: ""
