--- a/data/sitemap.yml
+++ b/data/sitemap.yml
@@ -27,6 +27,10 @@ sitemap:
     lastmod: "2025-09-13T16:19:00+02:00"
     priority: "0.6"
 
+  "/content/pearch/":
+    lastmod: "2025-09-14T00:15:00+02:00"
+    priority: "0.6"
+
   "/links/":
     lastmod: "2025-03-01T07:40:00+01:00"
     priority: "0.6"
