Added licenses to Excel Password Remover, Filed file input on standalone, Added auto-clear to file input Update excel-password-remover.yml, excel-password-remover.yml, and 3 more files...

--- a/data/strings/en/excel-password-remover.yml
+++ b/data/strings/en/excel-password-remover.yml
@@ -1,58 +1,43 @@
 # EN - Excel Password Remover
 
-meta.title: Excel Password Remover
-meta.description: >-
-  Small web application from which you can easily remove a password from an Excel
-  worksheet.  It works by leaving the task of editing the XML files on an Excel
-  document to your browser instead to keep everything local.
-meta.description.light: >-
-  Small web application from which you can easily remove a password from an Excel
-  worksheet directly in your browser.
+meta:
+  title: Excel Password Remover
+  description: >-
+    Small web application from which you can easily remove a password from an Excel
+    worksheet.  It works by leaving the task of editing the XML files on an Excel
+    document to your browser instead to keep everything local.
+  description.light: >-
+    Small web application from which you can easily remove a password from an Excel
+    worksheet directly in your browser.
 
-#article.subtitle: >-
-#  <a
-#  href="https://github.com/aziascreations/Excel-Worksheet-Password-Remover"><i
-#  class="fab fa-github"></i> View on GitHub</a>
-#intro.title: Introduction
-#intro.p1: >-
-#  This project aims to simplify the removal of passwords on Excel's Worksheet by
-#  leaving the task of editing the XML files on an Excel document to your
-#  browser.
-#working.title: Security & Internal workings
-#working.p1: >-
-#  In terms of security, your browser handles all the data without sending any of
-#  it to a central server like many web apps do.<br>This makes it, and your data,
-#  as safe as your browser can be since it is the only potential point of failure
-#  here.
-#working.p2: >-
-#  As for the internal workings, the only thing this tool does is extract the
-#  content of the <code>.xlsx</code> file you gave it and removes the passwords
-#  on any worksheets and makes a new file with all the changes.<br>Once all of
-#  that is done, the file is downloaded via a <a
-#  href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/Data_URLs">data
-#  URL</a>.
-#usage.title: Usage
-#usage.p1: >-
-#  To use this tool you can either visit "<a
-#  href="https://aziascreations.github.io/Excel-Worksheet-Password-Remover">aziascreations.github.io/Excel-Worksheet-Password-Remover</a>"
-#  or download the repository and host the web page yourself.
-#demo.title: Demonstration video
-#links.title: Links
-#content.link.demo: Demo hosted on GitHub
-
-
-eula.1: "This tool should only be used with files you have the express permission to unlock."
-eula.2: "All password removal is done locally in your browser, and <span class='t-bold'>no data is sent online</span>.<br>
+eula:
+  1: "This tool should only be used with files you have the express permission to unlock."
+  2: "All password removal is done locally in your browser, and <span class='t-bold'>no data is sent online</span>.<br>
 The original password cannot be revealed as it’s secure by design and not stored in plain text; it simply gets removed."
-eula.3: "By using this tool, you accept full responsibility, and that it is provided “as is” without any warranty."
+  3: "By using this tool, you accept full responsibility, and that it is provided “as is” without any warranty."
 
-file.selection.title: "File Selection"
-file.selection.1: "Drop your excel file(s) here or click on the buttons."
+file:
+  selection:
+    title: "File Selection"
+    1: "Drop your excel file(s) here or click on the buttons."
 
-details.title : "Result(s)"
-details.empty.1 : "Your Excel files with their password removed will end up here."
+details:
+  title : "Result(s)"
+  empty:
+    1 : "Your Excel files with their password removed will end up here."
 
-result.success.count: "Removed <span id=\"tmpl-success-password-count\">???</span> password(s)"
-result.warning.extension: "The file doesn't appear to be an Excel Worksheet !"
-result.warning.password: "The Excel Worksheet didn't contain any password !"
-result.error.jszip: "JSZip was unable to open the file !"
+result:
+  success:
+    count: "Removed <span id=\"tmpl-success-password-count\">???</span> password(s)"
+  warning:
+    extension: "The file doesn't appear to be an Excel Worksheet !"
+    password: "The Excel Worksheet didn't contain any password !"
+  error:
+    jszip: "JSZip was unable to open the file !"
+
+license:
+  title: "Licenses"
+  text:
+    1: "This tool uses the <a href=\"https://stuk.github.io/jszip/\">JSZip</a> 
+library, which is licensed under the <a href=\"https://github.com/Stuk/jszip/blob/main/LICENSE.markdown\">MIT license</a>."
+    2: "The rest of this tool's code is released in the <a href=\"https://github.com/aziascreations/Web-NibblePoker\">public domain</a>."
