--- a/data/strings/fr/excel-password-remover.yml
+++ b/data/strings/fr/excel-password-remover.yml
@@ -1,53 +1,44 @@
 # FR - Excel Password Remover
 
-meta.title: Excel Password Remover
-meta.description: >-
-  Petite application web qui permet de facilement retirer le mot de passe d'une
-  feuille de calcul Excel depuis votre navigateur web sans avoir à uploader le
-  fichier sur internet.  Cette application laisse votre navigateur modifier les
-  fichiers XML du fichier Excel afin de tout garder en local.
-meta.description.light: >-
-  Application web qui permet de facilement retirer le mot de passe d'un ficher Excel depuis 
-  votre navigateur web sans avoir à uploader le fichier sur internet.
+meta:
+  title: Excel Password Remover
+  description: >-
+    Petite application web qui permet de facilement retirer le mot de passe d'une
+    feuille de calcul Excel depuis votre navigateur web sans avoir à uploader le
+    fichier sur internet.  Cette application laisse votre navigateur modifier les
+    fichiers XML du fichier Excel afin de tout garder en local.
+  description.light: >-
+    Application web qui permet de facilement retirer le mot de passe d'un ficher Excel depuis 
+    votre navigateur web sans avoir à uploader le fichier sur internet.
 
-#article.subtitle: >-
-#  <a
-#  href="https://github.com/aziascreations/Excel-Worksheet-Password-Remover"><i
-#  class="fab fa-github"></i> Voir sur GitHub</a>
-#intro.title: Introduction
-#intro.p1: >-
-#  Ce projet vise à simplifier le processus de suppression des mots de passes sur
-#  les "worksheet" d'Excel en laissant votre navigateur web s'en charger.
-#working.title: Sécurité & Fonctionnement
-#working.p1: >-
-#  Cet outil charge le ficher que vous lui donnez en mémoire et travaille
-#  directement dessus dans le navigateur web sans utiliser un serveur central,
-#  vos données restent donc entièrement sur votre machine.
-#working.p2: >-
-#  Par sécurité, nous vous demandons quand même de n'utiliser cet outil qu'avec
-#  des fichiers pour lesquels vous avez été explicitement autorisés à enlever le
-#  mot de passe.
-#usage.title: Utilisation
-#usage.p1: >-
-#  Vous pouvez utiliser cet outil en allant sur "<a
-#  href="https://aziascreations.github.io/Excel-Worksheet-Password-Remover">aziascreations.github.io/Excel-Worksheet-Password-Remover</a>"
-#  ou en téléchargeant le dépôt et en hébergeant la page web vous-même.
-#demo.title: Vidéo de démonstration
-#links.title: Liens
-#content.link.demo: Démo hébergée sur GitHub
-
-eula.1 : "Cet outil ne doit être utilisé qu'avec des fichiers pour lesquels vous avez l'autorisation de les déverrouiller."
-eula.2 : "Toute suppression de mot de passe se fait localement dans votre navigateur, et <span class='t-bold'>aucune donnée n'est envoyée via Internet</span>.<br>
+eula:
+  1: "Cet outil ne doit être utilisé qu'avec des fichiers pour lesquels vous avez l'autorisation de les déverrouiller."
+  2: "Toute suppression de mot de passe se fait localement dans votre navigateur, et <span class='t-bold'>aucune donnée n'est envoyée via Internet</span>.<br>
 Le mot de passe original ne peut pas être révélé car il est sécurisé par Excel et n'est pas stocké en texte clair ; il est simplement supprimé."
-eula.3 : "En utilisant cet outil, vous acceptez l'entière responsabilité de vos action, et le fait qu'il est fourni “tel quel” sans aucune garantie."
+  3: "En utilisant cet outil, vous acceptez l'entière responsabilité de vos action, et le fait qu'il est fourni “tel quel” sans aucune garantie."
 
-file.selection.title : "Sélection de fichier(s)"
-file.selection.1 : "Déposez vos fichiers Excel ici ou cliquez sur les boutons."
+file:
+  selection:
+    title: "Sélection de fichier(s)"
+    1: "Déposez vos fichiers Excel ici ou cliquez sur les boutons."
 
-details.title: "Résultat(s)"
-details.empty.1 : "Vos fichiers Excel sans leurs mots de passe finiront ici."
+details:
+  title: "Résultat(s)"
+  empty:
+    1: "Vos fichiers Excel sans leurs mots de passe finiront ici."
 
-result.success.count: "Mot de passe(s) supprimé(s) : <span id=\"tmpl-success-password-count\">???</span>"
-result.warning.extension: "Le fichier ne semble pas être une feuille de calcul Excel !"
-result.warning.password: "La feuille de calcul Excel ne contenait aucun mot de passe !"
-result.error.jszip: "JSZip n'a pas pu ouvrir le fichier !"
+result:
+  success:
+    count: "Mot de passe(s) supprimé(s) : <span id=\"tmpl-success-password-count\">???</span>"
+  warning:
+    extension: "Le fichier ne semble pas être une feuille de calcul Excel !"
+    password: "La feuille de calcul Excel ne contenait aucun mot de passe !"
+  error:
+    jszip: "JSZip n'a pas pu ouvrir le fichier !"
+
+license:
+  title: "Licences"
+  text:
+    1: "Cet outil utilise la bibliothèque <a href=\"https://stuk.github.io/jszip/\">JSZip</a>,
+qui est distribuée sous licence <a href=\"https://github.com/Stuk/jszip/blob/main/LICENSE.markdown\">MIT</a>."
+    2: "Le reste du code de cet outil est placé dans le <a href=\"https://github.com/aziascreations/Web-NibblePoker\">domaine public</a>."
